# SDL-Hpp

./: .gitmodules  CMakeLists.txt  LICENSE.txt  README.md  SDL.hpp
generator/: .gitignore  Argument.h  CMakeLists.txt  CMakeUserPresets.json_sample  CType.cpp  CType.h  Epilogue.h  Function.cpp  Function.h  Parameter.cpp  Parameter.h  Prologue.h  main.cpp
